--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "noto server api",
   "main": "app.js",
   "scripts": {
-    "start": "babel-node app.js",
+    "start": "nodemon --exec babel-node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Khaled Mashaly",
@@ -18,6 +18,7 @@
     "eslint": "^5.4.0",
     "eslint-config-google": "^0.9.1",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^5.0.0"
+    "gulp-eslint": "^5.0.0",
+    "nodemon": "^1.18.3"
   }
 }
