--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "mongodb": "^3.1.4",
     "morgan": "^1.9.0"
   },
