--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "morgan": "^1.9.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.0.1",
+    "@babel/preset-env": "^7.0.0",
     "eslint": "^5.4.0",
     "eslint-config-google": "^0.9.1",
     "gulp": "^4.0.0",
