--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "devDependencies": {
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "eslint": "^5.4.0",
     "eslint-config-google": "^0.9.1",
     "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-eslint": "^5.0.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "rimraf": "^2.6.2"
   }
 }
