--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "cross-env": "^5.2.0",
     "eslint": "^5.4.0",
     "eslint-config-google": "^0.9.1",
     "gulp": "^4.0.0",
