--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^5.0.0",
+    "ncp": "^2.0.0",
     "nodemon": "^1.18.3",
     "rimraf": "^2.6.2"
   }
