--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/register": "^7.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.4.0",
