--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "mongodb": "^3.1.4",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
