--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "connect-mongodb-session": "^2.0.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "helmet": "^3.13.0",
     "mongodb": "^3.1.4",
+    "mongoose": "^5.2.17",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
@@ -27,7 +30,9 @@
     "@babel/register": "^7.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.4.0",
-    "eslint-config-google": "^0.9.1",
+    "eslint-config-google": "^0.10.0",
+    "eslint-import-resolver-node": "^0.3.2",
+    "eslint-plugin-import": "^2.14.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^5.0.0",
