--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
-    "connect-mongodb-session": "^2.0.3",
     "express": "^4.16.3",
-    "express-session": "^1.15.6",
+    "express-jwt": "^5.3.1",
     "helmet": "^3.13.0",
+    "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.4",
     "mongoose": "^5.2.17",
     "morgan": "^1.9.0",
