--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.7.3",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "express-session": "^1.16.1",
     "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.4",
