--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "connect-mongodb-session": "^2.1.1",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "express-session": "^1.16.1",
