--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "noto server api",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --exec babel-node app.js",
+    "start": "nodemon --signal SIGINT --exec babel-node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cross-env NODE_ENV=production gulp && node dist/app.js"
   },
