--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/node": "^7.2.2",
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
     "@babel/register": "^7.4.4",
+    "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.10.0",
@@ -39,8 +40,10 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^5.0.0",
+    "mocha": "^6.2.0",
     "ncp": "^2.0.0",
     "nodemon": "^1.19.0",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "sinon": "^7.4.1"
   }
 }
