--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon --signal SIGINT --exec babel-node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/*/**.js --require @babel/register",
     "build": "cross-env NODE_ENV=production gulp && node dist/app.js"
   },
   "author": "Khaled Mashaly",
