--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "argon2": "^0.23.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "connect-mongodb-session": "^2.1.1",
+    "connect-mongo": "^3.1.2",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
