--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "noto",
   "version": "1.0.0",
   "description": "noto server api",
+  "engines": {
+    "node": "12.x"
+  },
   "main": "app.js",
   "scripts": {
     "start": "npm run dev:db-seed && npm run dev:start",
