--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pino": "^5.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
