move source files to src folder

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "prestart": "npm run prod:db-seed",
     "start": "npm run prod:start",
     "predev:start": "npm run dev:db-seed",
-    "dev:start": "nodemon --signal SIGINT --exec babel-node app.js",
-    "dev:db-seed": "babel-node config/dbSeeder.js",
+    "dev:start": "nodemon --signal SIGINT --exec babel-node ./src/app.js",
+    "dev:db-seed": "babel-node ./src/config/dbSeeder.js",
     "prod:start": "node dist/app.js",
     "prod:db-seed": "node dist/config/dbSeeder.js",
     "test": "mocha tests/globalHooks.js tests/**/*.js --require @babel/register",
