--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "noto",
   "version": "1.0.0",
   "description": "noto server api",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/5aledmaged/noto-api.git"
+  },
   "engines": {
     "node": "12.x"
   },
