--- a/package.json
+++ b/package.json
@@ -56,10 +56,20 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^5.0.0",
+    "husky": "^4.2.1",
+    "lint-staged": "^10.0.7",
     "mocha": "^6.2.0",
     "ncp": "^2.0.0",
     "nodemon": "^1.19.0",
     "rimraf": "^2.6.3",
     "sinon": "^7.4.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
