--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "engines": {
     "node": "12.x"
   },
-  "main": "app.js",
+  "main": "src/index.js",
   "scripts": {
     "prestart": "npm run prod:db-seed",
     "start": "npm run prod:start",
     "predev:start": "npm run dev:db-seed",
-    "dev:start": "nodemon --signal SIGINT --exec babel-node ./src/app.js",
+    "dev:start": "nodemon --signal SIGINT --exec babel-node ./src/index.js",
     "dev:db-seed": "babel-node ./src/config/dbSeeder.js",
-    "prod:start": "node dist/app.js",
+    "prod:start": "node dist/index.js",
     "prod:db-seed": "node dist/config/dbSeeder.js",
     "test": "mocha tests/globalHooks.js tests/**/*.js --require @babel/register",
     "build": "cross-env NODE_ENV=production gulp build",
