require dotenv in development only

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prestart": "npm run prod:db-seed",
     "start": "npm run prod:start",
     "predev:start": "npm run dev:db-seed",
-    "dev:start": "nodemon --signal SIGINT --exec babel-node ./src/index.js",
+    "dev:start": "nodemon --signal SIGINT --exec \"babel-node -r dotenv/config ./src/index.js\"",
     "dev:db-seed": "babel-node ./src/config/dbSeeder.js",
     "prod:start": "node dist/index.js",
     "prod:db-seed": "node dist/config/dbSeeder.js",
@@ -32,7 +32,6 @@
     "compression": "^1.7.4",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "helmet": "^3.21.2",
@@ -50,6 +49,7 @@
     "@babel/register": "^7.8.3",
     "chai": "^4.2.0",
     "cross-env": "^5.2.1",
+    "dotenv": "^8.2.0",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.10.0",
     "eslint-import-resolver-node": "^0.3.3",
