--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "dev:db-seed": "babel-node ./src/config/dbSeeder.js",
     "prod:start": "node dist/index.js",
     "prod:db-seed": "node dist/config/dbSeeder.js",
-    "test": "mocha tests/globalHooks.js tests/**/*.js -r @babel/register dotenv/config",
-    "e2e": "mocha e2e/global-hooks.js e2e/**/*.js -r @babel/register dotenv/config",
+    "test": "cross-env NODE_ENV=test mocha tests/globalHooks.js tests/**/*.js -r @babel/register dotenv/config",
+    "e2e": "cross-env NODE_ENV=test mocha e2e/global-hooks.js e2e/**/*.js -r @babel/register dotenv/config",
     "build": "cross-env NODE_ENV=production gulp build",
     "lint": "gulp lintAll"
   },
