set env without cross-env

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "dev:db-seed": "babel-node ./src/config/dbSeeder.js",
     "prod:start": "node dist/index.js",
     "prod:db-seed": "node dist/config/dbSeeder.js",
-    "test": "cross-env NODE_ENV=test mocha tests/globalHooks.js tests/**/*.js -r @babel/register dotenv/config",
-    "e2e": "cross-env NODE_ENV=test mocha e2e/global-hooks.js e2e/**/*.js -r @babel/register dotenv/config",
-    "build": "cross-env NODE_ENV=production gulp build",
+    "test": "NODE_ENV=test mocha tests/globalHooks.js tests/**/*.js -r @babel/register dotenv/config",
+    "e2e": "NODE_ENV=test mocha e2e/global-hooks.js e2e/**/*.js -r @babel/register dotenv/config",
+    "build": "NODE_ENV=production gulp build",
     "lint": "gulp lintAll"
   },
   "author": "Khaled Mashaly",
@@ -48,7 +48,6 @@
     "@babel/plugin-transform-modules-commonjs": "^7.8.3",
     "@babel/register": "^7.8.3",
     "chai": "^4.2.0",
-    "cross-env": "^5.2.1",
     "dotenv": "^8.2.0",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.10.0",
